# MARL-UAV-WIND

./: main.py  pyproject.toml
assets/wind_map/: ux.csv
utils_scripts/: dataset_wind_genrator.py  multiuse_visu.py  rotate_stl.py  slice_and_export.py  visualize_wind_map.py
